DepthMapProcessor/DepthMapProcessorAPI.h

#pragma once

#include "Structures.h"

#define DLL_EXPORT extern "C" _declspec(dllexport)

DLL_EXPORT void* CreateDepthMapProcessor(ColorCameraIntristics colorIntrinsics, DepthCameraIntristics depthIntrinsics);

DLL_EXPORT void SetCalculatorSettings(void* handle, short floorDepth, short cutOffDepth);

DLL_EXPORT ObjDimDescription* CalculateObjectVolume(void* handle, int mapWidth, int mapHeight, short* mapData);

DLL_EXPORT ObjDimDescription* CalculateObjectVolumeAlt(void* handle, int imageWidth, int imageHeight, byte* imageData, 
	int bytesPerPixel, RelRect roiRect, int mapWidth, int mapHeight, short* mapData);

DLL_EXPORT short CalculateFloorDepth(void* handle, int mapWidth, int mapHeight, short* mapData);

DLL_EXPORT void DestroyDepthMapProcessor(void* handle);